[package]
name = "async-subscription-map"
version = "0.1.0"
edition = "2021"
authors = [
    "Florian Uekermann <florian.uekermann@hum-systems.com>",
    "Mara Schulke <mara.schulke@hum-systems.com>",
]

[dependencies]
anyhow = "1"
async-std = { version = "1.11", features = ["attributes"] }
async-observable = "0.1"
log = "0.4"
