[package]
name = "async-subscription-map"
version = "0.1.0"
edition = "2021"
description = "Async bookkeeping datastructure for state subscriptions"
authors = [
    "Mara Schulke <mara.schulke@hum-systems.com>",
    "Florian Uekermann <florian.uekermann@hum-systems.com>"
]
repository = "https://github.com/Hum-Systems/async-subscription-map"
documentation = "https://docs.rs/async-subscription-map"
keywords = ["async", "subscriptions", "reactive", "observable", "synchronization"]
categories = ["asynchronous", "concurrency", "network-programming"]
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1"
async-std = { version = "1.12", features = ["attributes"] }
async-observable = "0.2"
log = "0.4"

[dev-dependencies]
simple_logger = "*"
